@@ -2,7 +2,8 @@
 v3.0.0alpha7
 ------------
 
-
+[rla] PHP 8.1 compatibility improvements: Serialization etc.
+|+
 
 
 ------------
